--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
 <div id="intro-section" class="view">
-    <video class="video-intro" poster="https://mdbootstrap.com/img/Photos/Others/background.jpg" playsinline autoplay muted loop>
-        <source src="/images/VideoFondo.mp4" type="video/mp4">
+    <video class="video-intro" playsinline autoplay muted loop>
+        <source src="/images/Video.mp4" type="video/mp4">
     </video>
     <div class="mask rgba-gradient d-flex justify-content-center align-items-center my-5">
         <div class="overlay"></div>
