--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,3 +5,12 @@
 .navbar{
     transition: all 0.5s;
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 0; 
+}
