--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3" [class.bg-dark]="isScrolled" [class.shadow]="isScrolled">
+<div class="overlay"></div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark " [class.bg-dark]="isScrolled" [class.shadow]="isScrolled">
   <div class="container">
     <a class="navbar-brand" href="#">Esteban Mejia</a>
     <button
