--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -24,8 +24,7 @@
                   <div class="entry-title">Universidad El Bosque, Bogotá, DC (2022 - Present)</div>
                   <div class="entry-details my-4">
                     <p><strong>Program:</strong> Systems Engineering (6th semester)</p>
-                    <p><strong>GPA:</strong> 4.0/5.0</p>
-                    <p><strong>Role:</strong> Representative of the Competitive Programming Group</p>
+                    <p><strong>Role:</strong> Representative of GPC-UEB</p>
                   </div>
                 </div>
               </div>
@@ -51,16 +50,16 @@
               <div class="section">
                 <div class="section-title">Participation in National and International Events</div>
                 <ul class="event-list">
-                  <li>1st Internal Programming Marathon, Universidad El Bosque</li>
+                  <li>1er Maraton Interna de Programacion, Universidad El Bosque</li>
                   <li>RPC 7 Rounds 2022</li>
                   <li>ACIS CCPL 3 Rounds 2022</li>
                   <li>Google Kickstart Round F 2022</li>
-                  <li>36th National Programming Marathon ACIS-REDIS 2022</li>
+                  <li>36th Maraton Nacional de Programacion ACIS-REDIS 2022</li>
                   <li>RPC 3 Rounds 2023</li>
                   <li>ACIS CCPL 2 Round 2023</li>
-                  <li>2nd Internal Programming Marathon, Universidad El Bosque</li>
-                  <li>37th National Programming Marathon ACIS-REDIS 2022</li>
-                  <li>3rd Internal Programming Marathon, Universidad El Bosque</li>
+                  <li>2da Maraton Interna de Programacion, Universidad El Bosque</li>
+                  <li>37th Maraton Nacional de Programacion ACIS-REDIS 2022</li>
+                  <li>3er Maraton Interna de Programacion, Universidad El Bosque</li>
                   <li>RPC 2 Rounds 2024</li>
                   <li>ACIS CCPL 1 Round 2024</li>
                 </ul>
@@ -118,14 +117,14 @@
                   <li>
                     <div class="entry-title">Andres Felipe Espitia Rodriguez</div>
                     <div class="entry-details my-4">
-                      <p><strong>Project Manager:</strong> UEBFA</p>
+                      <p><strong>Group mate:</strong> UEBFA</p>
                       <p><strong>Contact Number:</strong> +57 311 5214670</p>
                     </div>
                   </li>
                   <li>
-                    <div class="entry-title">Diego Fernando Rodriguez Castañeda</div>
+                    <div class="entry-title">Ing. Diego Fernando Rodriguez Castañeda</div>
                     <div class="entry-details my-4">
-                      <p><strong>Teacher:</strong> Universidad el Bosque</p>
+                      <p><strong>Engineer:</strong> Universidad ECCI</p>
                       <p><strong>Contact Number:</strong> +57 300 3653646</p>
                     </div>
                   </li>
@@ -135,13 +134,6 @@
                       <p><strong>C.E.O</strong> PATITAS ON BOARD</p>
                       <p><strong> HR manager</strong></p>
                       <p><strong>Contact Number:</strong> +57 305 7470223</p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="entry-title">Jaime Humberto Mejia Bermudez</div>
-                    <div class="entry-details my-4">
-                      <p><strong>OP Manager</strong> OUTSOURCING S.A</p>
-                      <p><strong>Contact Number:</strong> +57 310 3264357</p>
                     </div>
                   </li>
                 </ul>
