--- a/src/app/madeprojects/madeprojects.component.html
+++ b/src/app/madeprojects/madeprojects.component.html
@@ -5,6 +5,65 @@
       <div class="row my-4">
         <div class="col-md-4">
           <div class="card" style="width: 25rem;">
+            <div id="carousel6" class="carousel slide">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/images/PatitasMenu.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/PatitasExp.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/PatitasServ.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/PatitasReq.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/PatitasPreh.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carousel6"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carousel6"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><strong>Patitas On Board</strong></h5>
+              <p class="card-text"> <strong>Worko</strong> is an app designed to help you follow your gym routines and
+                workouts. It offers a wide variety of routines and exercises, adapting to different levels and training
+                goals.</p>
+
+              <p>The application is developed using <strong>Spring Boot</strong> for the back-end. The back-end is
+                composed of multiple Spring Boot instances connected to their respective databases and a Spring Facade
+                that connects to the front-end and distributes data to the other Spring Boot services. The front-end is
+                built with<strong> JSF (JavaServer Faces)</strong> . For data management,<strong> Worko</strong>
+                utilizes four databases distributed between <strong> MongoDB</strong> and <strong> MySQL</strong> .</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <img src="https://img.shields.io/badge/Angular-red?style=for-the-badge&logo=Angular" alt="">
+                <img src="https://img.shields.io/badge/Bootstrap-violet?style=for-the-badge&logo=Bootstrap" alt="">
+                <img src="https://img.shields.io/badge/HTML5-white?style=for-the-badge&logo=HTML5" alt="">
+                <img src="https://img.shields.io/badge/CSS-blue?style=for-the-badge&logo=CSS3" alt="">
+                <img src="https://img.shields.io/badge/Typescript-white?style=for-the-badge&logo=Typescript" alt="">
+            </ul>
+            <div class="card-body text-center">
+              <h6>Github link</h6>
+              <a mdbRipple class="btn btn-outline-dark btn-floating m-1" href="https://github.com/3xiic/Worko"
+                role="button"><i class="bi bi-github"></i></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card" style="width: 25rem;">
             <div id="carouselExample" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -117,52 +176,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card" style="width: 25rem;">
-            <div id="carousel3" class="carousel slide">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="/images/unoMenu.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/images/Unogame1.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/images/unogame2.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/images/unoBotcard.png" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title"><strong>UNO Teacher</strong></h5>
-              <p class="card-text"> is an application that teaches you how to play the
-                traditional UNO card game while you play. It features a friendly instructor robot named D.O.S., who
-                guides you through the rules and strategies of the game. The application is designed using <strong>Java
-                  GUI</strong>.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item text-center">
-                <img src="https://img.shields.io/badge/JAVA-orange?style=for-the-badge&logo=Java" alt="">
-            </ul>
-            <div class="card-body text-center">
-              <h6>Github link</h6>
-              <a mdbRipple class="btn btn-outline-dark btn-floating m-1"
-                href="https://github.com/3xiic/UNOTeacherJavaGUI" role="button"><i class="bi bi-github"></i></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
+
+      <div class="row py-5">
         <div class="col-md-4">
           <div class="card" style="width: 25rem;">
             <div id="carousel4" class="carousel slide">
@@ -268,62 +283,49 @@
         </div>
         <div class="col-md-4">
           <div class="card" style="width: 25rem;">
-            <div id="carousel6" class="carousel slide">
+            <div id="carousel3" class="carousel slide">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/images/dress1.png" class="d-block w-100" alt="...">
+                  <img src="/images/unoMenu.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/dress2.png" class="d-block w-100" alt="...">
+                  <img src="/images/Unogame1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/dress3.png" class="d-block w-100" alt="...">
+                  <img src="/images/unogame2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/dress4.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/images/dress5.png" class="d-block w-100" alt="...">
+                  <img src="/images/unoBotcard.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carousel6"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carousel6"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
             <div class="card-body">
-              <h5 class="card-title"><strong>DressCode</strong></h5>
-              <p class="card-text"> <strong>Worko</strong> is an app designed to help you follow your gym routines and
-                workouts. It offers a wide variety of routines and exercises, adapting to different levels and training
-                goals.</p>
-
-              <p>The application is developed using <strong>Spring Boot</strong> for the back-end. The back-end is
-                composed of multiple Spring Boot instances connected to their respective databases and a Spring Facade
-                that connects to the front-end and distributes data to the other Spring Boot services. The front-end is
-                built with<strong> JSF (JavaServer Faces)</strong> . For data management,<strong> Worko</strong>
-                utilizes four databases distributed between <strong> MongoDB</strong> and <strong> MySQL</strong> .</p>
+              <h5 class="card-title"><strong>UNO Teacher</strong></h5>
+              <p class="card-text"> is an application that teaches you how to play the
+                traditional UNO card game while you play. It features a friendly instructor robot named D.O.S., who
+                guides you through the rules and strategies of the game. The application is designed using <strong>Java
+                  GUI</strong>.</p>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <img
-                  src="https://img.shields.io/badge/Springboot-Green?style=for-the-badge&logo=Spring&labelColor=white&color=green"
-                  alt="">
-                <img src="https://img.shields.io/badge/JSF-red?style=for-the-badge" alt="">
-                <img src="https://img.shields.io/badge/Primefaces-darkblue?style=for-the-badge&logo=Primefaces" alt="">
+              <li class="list-group-item text-center">
+                <img src="https://img.shields.io/badge/JAVA-orange?style=for-the-badge&logo=Java" alt="">
             </ul>
             <div class="card-body text-center">
               <h6>Github link</h6>
-              <a mdbRipple class="btn btn-outline-dark btn-floating m-1" href="https://github.com/3xiic/Worko"
-                role="button"><i class="bi bi-github"></i></a>
+              <a mdbRipple class="btn btn-outline-dark btn-floating m-1"
+                href="https://github.com/3xiic/UNOTeacherJavaGUI" role="button"><i class="bi bi-github"></i></a>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
   </div>
