--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,10 +9,28 @@
         <div class="row">
           <div class="col-md-6 text-left">
             <h4>Introduction</h4>
-            <p>I am a versatile and highly skilled individual capable of managing multiple tasks simultaneously. I have a solid academic background and exceptional performance, with experience in competitive programming, Java project development, and web development (both frontend and backend). I am known for my dynamism, proactivity, enthusiasm, and creativity. I possess strong problem-solving skills and extensive knowledge of various programming languages. Additionally, my empathy and constant drive for professional growth complement and enhance my technical and personal abilities.</p>
+            <p>Web developer and competitive programmer with solid experience in both back-end and
+              front-end development. Specialized in frameworks such as Spring Boot, Django, Angular,
+              and JSF. Advanced proficiency in programming languages, mainly Java and Python, and
+              efficient management of databases (MySQL, MongoDB, Oracle, PostgreSQL). Recognized
+              in programming competitions for excellent results. Skilled in problem-solving, process
+              optimization, and maintaining a positive attitude.</p>
             
-            <h4>Technical Skills</h4>
-            <p>I have extensive experience with various frameworks such as <strong>Spring Boot, Django, Angular,</strong> and <strong>JSF</strong>, which facilitate efficient web development. I am proficient in managing databases like <strong>MongoDB</strong> and <strong>MySQL</strong>, ensuring robust and scalable data solutions.</p>
+            <h4>Personal information</h4>
+            <li> <strong>Name:</strong>  Jaime Esteban Mejia Arevalo</li>
+            <li> <strong>Username:</strong>  Exiic</li>
+            <li> <strong>Place of Birth: </strong>Bogotá, Colombia</li>
+            <li> <strong> Marital Status: </strong> Single</li>
+            <li> <strong>Contact: </strong>  <a mdbRipple class="btn btn-outline-dark btn-floating m-1" href="mailto:estebanm3j@gmail.com" role="button"
+              ><i class="bi bi-google"></i></a>
+      
+            <a mdbRipple class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/estm3j/" role="button"
+              ><i class="bi bi-linkedin"></i></a>
+      
+            <a mdbRipple class="btn btn-outline-dark btn-floating m-1" href="https://github.com/3xiic" role="button"
+              ><i class="bi bi-github"></i></a></li>
+           
+             
             
             <h4>Currently learning</h4>
             <p>Lately, I have been learning <strong>Kotlin, Django,</strong> and <strong>React.js</strong> to expand my knowledge in this fascinating world of programming.</p>
