--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,6 @@
 <app-header></app-header>
 
-<div id="intro-section" class="view">
-    <video class="video-intro" playsinline autoplay muted loop>
-        <source src="/images/Video.mp4" type="video/mp4">
-    </video>
-    <div class="mask rgba-gradient d-flex justify-content-center align-items-center my-5">
-        <div class="overlay"></div>
-        <div class="container px-md-3 px-sm-0 content my-5">
-            <div class="row wow fadeIn my-5">
-                <div class="col-md-12 mb-4 white-text text-center wow fadeIn my-5">
-                    <h3 class="display-3 font-weight-bold white-text mb-0 pt-md-5 pt-5 text-white my-5">Esteban Mejia</h3>
-                    <hr class="hr-light my-4 w-100 text-white align-items-center">
-                    <h4 class="subtext-header mt-2 mb-4 text-white">Portfolio</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<app-fondo></app-fondo>
 
 <main>
 
