--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark text-center text-white">
+<footer class="bg-fondo text-center text-white ">
     <div class="container p-4">
       <section id="Contact" class="mb-4">
             <h3>Contact me</h3>
@@ -19,5 +19,8 @@
     </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       Jaime Esteban Mejia Arevalo
+      <img class="logo" src="/images/logow.png" alt="">
     </div>
+    
+
   </footer>
