--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
-<div class="overlay"></div>
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark " [class.bg-dark]="isScrolled" [class.shadow]="isScrolled">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark " [class.bg-fondo]="isScrolled" [class.shadow]="isScrolled">
   <div class="container">
-    <a class="navbar-brand" href="#">Esteban Mejia</a>
+    <a class="navbar-brand" href="#">🟡🔵🔴 Esteban Mejia</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -34,6 +33,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="#Contact">Contact me</a>
+        </li>
+        <li class="nav-item">
+          <img class="logo" src="/images/logow.png" alt="">
         </li>
       </ul>
     </div>
