--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,12 +5,10 @@
 .navbar{
     transition: all 0.5s;
 }
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
-    z-index: 0; 
+.bg-fondo{
+    background-color: #F73859;
+}
+.logo{
+    margin-top: 22%;
+   width: 50px;
 }
