--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,6 +10,8 @@
   
         <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://github.com/3xiic" role="button"
           ><i class="bi bi-github"></i></a>
+          <a mdbRipple class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/estm3j/?hl=es" role="button"
+          ><i class="bi bi-instagram"></i></a>
       </section>
       <section class="mb-4">
         <p>
