--- a/src/app/madeprojects/madeprojects.component.html
+++ b/src/app/madeprojects/madeprojects.component.html
@@ -14,7 +14,7 @@
                   <img src="/images/PatitasExp.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/PatitasServ.png" class="d-block w-100" alt="...">
+                  <img src="/images/Patitas new.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                   <img src="/images/PatitasReq.png" class="d-block w-100" alt="...">
