--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-
 <app-fondo></app-fondo>
 
 <main>
@@ -7,6 +6,11 @@
     <app-about></app-about>
     <div class="line-div"></div>
     <app-skills></app-skills>
+    <h2 class="tic">ULTIMO PROYECTO</h2>
+    <div class="line-div"></div>
+    <div class="calculator">
+        <app-ip-calc></app-ip-calc>
+    </div>
     <div class="line-div"></div>
     <app-madeprojects></app-madeprojects>
     <div class="line-div"></div>
