--- a/src/app/ip-calc/ip-calc.component.css
+++ b/src/app/ip-calc/ip-calc.component.css
@@ -103,8 +103,7 @@ h2 {
     position: absolute;
     width: 50vw ;
     height: 31vw;
-    left: 24vw;
-    top: 215vw;
+    transform: translate(50%, 50%);
     background: rgba(0, 0, 0, 0.7); 
     z-index: 1; 
   }
@@ -124,12 +123,19 @@ h2 {
     left: 0;
     z-index: -1;
   }
+
+  #calc{
+    position:relative;
+  }
+
   .title{
     position: absolute;
     color: white;
     font-size: 5vw;
-    top: 220vw;
-    left: 28vw;
+    width: 100%;
+    text-align: center;
+    top: 5%;
+
     font-weight: bold;
     z-index: 3;
   }
@@ -137,8 +143,9 @@ h2 {
     position: absolute;
     color: white;
     font-size: 1vw;
-    top: 227vw;
-    left: 42vw;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, 0);
     font-weight: bold;
     z-index: 3;
   }
@@ -146,8 +153,9 @@ h2 {
     position: absolute;
     color: white;
     font-size: 1vw;
-    top: 232vw;
-    left: 42vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
     font-weight: bold;
     z-index: 3;
   }
@@ -155,8 +163,9 @@ h2 {
     position: absolute;
     color: white;
     font-size: 1vw;
-    top: 239vw;
-    left: 43vw;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, 0);
     font-weight: bold;
     z-index: 3;
   }
