--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -39,7 +39,7 @@
             <p>In my free time, I primarily focus on playing games or developing personal projects. I have a deep passion for music and enjoy it as an integral part of my daily life.</p>
           </div>
           <div class="col-md-6 image">
-            <img  src="/images/yo.jpg" alt="About Me Image" class="img-fluid rounded">
+            <img  src="/images/YoYPanas.jpg" alt="About Me Image" class="img-fluid rounded">
           </div>
         </div>
       </section>
